# AAL_Boxes

./: .gitignore  CMakeLists.txt  readme.md
boxes_aficionado/: Box.cpp
sources/: main.cpp
sources/boxes_aficionado/: Box.cpp  Box.hpp  BoxesProvider.hpp  ProblemInstance.hpp  ProgramInitializer.hpp  RandomNumberGenerator.h  units.h
sources/boxes_aficionado/algorithms/: Algorithm.hpp  AlgorithmSelector.hpp  BoxesAficionadoAlgorithm.cpp  BoxesAficionadoAlgorithm.hpp  BrutForceAlgorithm.cpp  BrutForceAlgorithm.hpp
sources/boxes_aficionado/algorithms/max_volume_first_algorithm/: MaxVolumeFirstAlgorithm.cpp  MaxVolumeFirstAlgorithm.hpp  Vertex.cpp  Vertex.h
sources/boxes_aficionado/algorithms/optimized_brut_force_algorithm/: OptimizedBrutForceAlgorithm.cpp  OptimizedBrutForceAlgorithm.h
sources/boxes_aficionado/boxes/: Box.cpp  Box.hpp  BoxesGenerator.hpp  BoxesProvider.hpp
sources/boxes_aficionado/boxes/boxes_provider/: BoxesFileParser.h  BoxesGenerator.hpp  BoxesProvider.hpp  BoxesStandardStreamParser.h
sources/boxes_aficionado/problem_instance/: ProblemInstance.hpp
sources/boxes_aficionado/program/: Program.h  ProgramDecorator.h  ProgramInitializer.cpp  ProgramInitializer.hpp  SolveProgram.hpp
sources/boxes_aficionado/program/result_printer/: FileResultPrinter.h  ResultPrinter.h
sources/scripts/: correctness_testing.sh  correctness_tests_generation.sh  tests_generation.sh  time_measurement.sh  time_tests_generation.sh
sources/scripts/tests/correctness_tests/: 10_1.in  10_1.out  10_10.in  10_10.out  10_2.in  10_2.out  10_3.in  10_3.out  10_4.in  10_4.out  10_5.in  10_5.out  10_6.in  10_6.out  10_7.in  10_7.out  10_8.in  10_8.out  10_9.in  10_9.out  11_1.in  11_1.out  11_10.in  11_10.out  11_2.in  11_2.out  11_3.in  11_3.out  11_4.in  11_4.out  11_5.in  11_5.out  11_6.in  11_6.out  11_7.in  11_7.out  11_8.in  11_8.out  11_9.in  11_9.out  (+200 more)
sources/scripts/tests/time_tests/: 0_10_1  0_10_10  0_10_2  0_10_3  0_10_4  0_10_5  0_10_6  0_10_7  0_10_8  0_10_9  0_11_1  0_11_10  0_11_2  0_11_3  0_11_4  0_11_5  0_11_6  0_11_7  0_11_8  0_11_9  0_12_1  0_12_10  0_12_2  0_12_3  0_12_4  0_12_5  0_12_6  0_12_7  0_12_8  0_12_9  0_4_1  0_4_10  0_4_2  0_4_3  0_4_4  0_4_5  0_4_6  0_4_7  0_4_8  0_4_9  (+160 more)
